fix: Switched to pokemonmoves in query and improved text visibility

--- a/src/pages/PokemonDetail/styles.css
+++ b/src/pages/PokemonDetail/styles.css
@@ -240,6 +240,11 @@
     text-align: center;
     height: 32px;
     justify-content: center;
+    color: #1D1D1D;
+}
+
+.move-name {
+    line-height: 1.4;
 }
 
 .detail-description {
